--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/bd
+spring.datasource.url=jdbc:postgresql://localhost:5432/g3-watchlist-bd
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=2558
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #URL BASe del servicio
-server.servlet.context-path=/api/xxx-ms
+server.servlet.context-path=/api/spitiri-g3
 server.port=8080
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
