--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
       postgres:
         image: postgres:11.6-alpine
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: 2558
           POSTGRES_DB: test
           POSTGRES_USER: postgres
         ports:
