--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,8 +13,8 @@ jobs:
       postgres:
         image: postgres:11.6-alpine
         env:
-          POSTGRES_PASSWORD: 2558
-          POSTGRES_DB: g3-watchlist-bd
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test
           POSTGRES_USER: postgres
         ports:
           - 5432:5432
