--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/g3-watchlist-bd
 spring.datasource.username=postgres
-spring.datasource.password=2558
+spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #URL BASe del servicio
