--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/g3-watchlist-bd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #URL BASe del servicio
 server.servlet.context-path=/api/watchlists-ms
-server.port=8081
+server.port=8080
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
