--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/g3-watchlist-bd
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:g3-watchlist-bd}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #URL BASe del servicio
 server.servlet.context-path=/api/watchlists-ms
-server.port=8080
+server.port=${PORT:8080}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
