--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.port=${PORT:8080}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+api.users.url=https://g3-users-ms.herokuapp.com/api/user-ms/users/
