--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,4 +9,5 @@ server.port=8080
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+api.users.url=https://g3-users-ms.herokuapp.com/api/user-ms/users/
 
