--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,25 @@
 		        <groupId>io.springfox</groupId>
 		        <artifactId>springfox-swagger-ui</artifactId>
 		        <version>2.9.2</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		
+		
+				
 	</dependencies>
 
 	<build>
