--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 api.users.url=https://g3-users-ms.herokuapp.com/api/user-ms/users/
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=${REDIS_PORT:6379}
+spring.redis.pass=${REDIS_PASS:}
+spring.redis.user=${REDIS_USER:}
