--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,13 +1,18 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:test}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #URL BASe del servicio
 server.servlet.context-path=/api/watchlists-ms
-server.port=8080
+server.port=${PORT:8080}
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 api.users.url=https://g3-users-ms.herokuapp.com/api/user-ms/users/
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=${REDIS_PORT:6379}
+spring.redis.pass=${REDIS_PASS:}
+spring.redis.user=${REDIS_USER:}
+
 
